@@ -3,6 +3,7 @@ package de.numcodex.sq2cql.model.structured_query;
 import de.numcodex.sq2cql.Container;
 import de.numcodex.sq2cql.model.MappingContext;
 import de.numcodex.sq2cql.model.cql.BooleanExpression;
+import de.numcodex.sq2cql.model.cql.ComparatorExpression;
 import de.numcodex.sq2cql.model.cql.Expression;
 import de.numcodex.sq2cql.model.cql.InvocationExpression;
 import de.numcodex.sq2cql.model.cql.ListSelector;
@@ -11,7 +12,8 @@ import de.numcodex.sq2cql.model.cql.StringLiteralExpression;
 
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
+
+import static de.numcodex.sq2cql.model.common.Comparator.EQUAL;
 
 /**
  * @author Alexander Kiel
@@ -31,8 +33,12 @@ public final class CodeModifier extends AbstractModifier {
 
     public Container<BooleanExpression> expression(MappingContext mappingContext, Expression alias) {
         var propertyExpr = InvocationExpression.of(alias, path);
-        var list = ListSelector.of(codes.stream().map(StringLiteralExpression::of).collect(Collectors.toList()));
-        return Container.of(MembershipExpression.in(propertyExpr, list));
+        if (codes.size() == 1) {
+            return Container.of(ComparatorExpression.of(propertyExpr, EQUAL, StringLiteralExpression.of(codes.get(0))));
+        } else {
+            var list = ListSelector.of(codes.stream().map(StringLiteralExpression::of).toList());
+            return Container.of(MembershipExpression.in(propertyExpr, list));
+        }
     }
 
     @Override
